fix: fix CSS flexbox removing whitespace in section_records search mode

--- a/core/component_portal/css/component_portal.less
+++ b/core/component_portal/css/component_portal.less
@@ -154,6 +154,7 @@
 		.section_record.list {
 			display: flex;
 			align-items: center;
+			white-space: pre-wrap;
 		}
 	}
 }//end &.component_portal, &.portal
